# lodestone_scraper

./: Cargo.toml  README.md
src/: builder.rs  error.rs  lib.rs  models.rs  util.rs
src/builder/: character_search.rs  free_company_search.rs  linkshell.rs  linkshell_search.rs
src/models/: class_job_role.rs
src/util/: as_lodestone.rs  either.rs
